--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,20 @@
 .App {
+  background-color: #282c34;
   text-align: center;
 }
 
 .App-header {
+  padding-top: 20px;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+   min-height: 100px;
+  display: flex; 
+   flex-direction: column;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+form{
+  color: antiquewhite;
+  margin: 10px;
+  display: list-item;
+flex-direction: column;
 }
