--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 form{
   color: antiquewhite;
+  padding: 2.5rem;
+}
+input{
   margin: 10px;
-  display: list-item;
-flex-direction: column;
 }
